<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/padding_style"
    android:background="@drawable/bg_free"
    tools:context="com.gxu.smallshop.GoodsInfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_num" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/mu_num_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_name" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_name_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_pwd" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_pwd_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_email" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_email_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_phone" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_phone_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_rebate" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_rebate_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/add_user"
        android:layout_gravity="center"
        style="@style/btn_style"
        android:text="@string/add_user"
        android:layout_height="wrap_content" />



</LinearLayout>
