<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/padding_style"
    tools:context="com.gxu.smallshop.GoodsInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/s_age" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/s_age_value" android:layout_width="wrap_content"
            android:layout_weight="20"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/g_num" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/s_sex_value" android:layout_width="wrap_content"
            android:layout_weight="20"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/g_name" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/s_department_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/g_price" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/s_pwd_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/s_permitborrowtime" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/s_permitborrowtime_value" android:layout_width="wrap_content"
            android:layout_weight="20"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/update_stu"
        android:layout_gravity="center"
        style="@style/btn_style"
        android:text="@string/update_goods"
        android:layout_height="wrap_content" />



</LinearLayout>
